syntax = "proto3";

package cosmos.farming.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/tendermint/farming/x/farming/types";

// Msg defines the farming Msg service.
service Msg {
  // CreateFixedAmountPlan defines a method for creating a new fixed amount
  // farming plan
  rpc CreateFixedAmountPlan(MsgCreateFixedAmountPlan) returns (MsgCreateFixedAmountPlanResponse);

  // CreateRatioPlan defines a method for creating a new ratio farming plan
  rpc CreateRatioPlan(MsgCreateRatioPlan) returns (MsgCreateRatioPlanResponse);

  // Stake defines a method for staking coins into the farming plan
  rpc Stake(MsgStake) returns (MsgStakeResponse);

  // Unstake defines a method for unstaking coins from the farming plan
  rpc Unstake(MsgUnstake) returns (MsgUnstakeResponse);

  // harvest defines a method for claiming farming rewards
  rpc Harvest(MsgHarvest) returns (MsgHarvestResponse);
}

// MsgCreateFixedAmountPlan defines a SDK message for creating a new fixed
// amount farming plan.
message MsgCreateFixedAmountPlan {
  // farming_pool_address defines the bech32-encoded address of the farming pool
  string farming_pool_address = 1 [(gogoproto.moretags) = "yaml:\"farming_pool_address\""];

  // staking_coin_weights specifies coins weight for the plan
  repeated cosmos.base.v1beta1.DecCoin staking_coin_weights = 2 [
    (gogoproto.moretags)     = "yaml:\"staking_coin_weights\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable)     = false
  ];

  // start_time specifies the start time of the plan
  google.protobuf.Timestamp start_time = 3
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];

  // end_time specifies the end time of the plan
  google.protobuf.Timestamp end_time = 4
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];

  // epoch_amount specifies the distributing amount for each epoch
  repeated cosmos.base.v1beta1.Coin epoch_amount = 5 [
    (gogoproto.moretags)     = "yaml:\"epoch_amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}

// MsgCreateRatioPlan defines a SDK message for creating a new ratio farming
// plan.
message MsgCreateRatioPlan {
  // farming_pool_address defines the bech32-encoded address of the farming pool
  string farming_pool_address = 1 [(gogoproto.moretags) = "yaml:\"farming_pool_address\""];

  // staking_coin_weights specifies coins weight for the plan
  repeated cosmos.base.v1beta1.DecCoin staking_coin_weights = 2 [
    (gogoproto.moretags)     = "yaml:\"staking_coin_weights\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.DecCoins",
    (gogoproto.nullable)     = false
  ];

  // start_time specifies the start time of the plan
  google.protobuf.Timestamp start_time = 3
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"start_time\""];

  // end_time specifies the end time of the plan
  google.protobuf.Timestamp end_time = 4
      [(gogoproto.stdtime) = true, (gogoproto.nullable) = false, (gogoproto.moretags) = "yaml:\"end_time\""];

  // epoch_ratio specifies the distributing amount by ratio
  string epoch_ratio = 5 [
    (gogoproto.moretags)   = "yaml:\"epoch_ratio\"",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable)   = false
  ];
}

// MsgStake defines a SDK message for staking coins into the farming plan.
message MsgStake {
  // farmer defines the bech32-encoded address of the farmer
  string farmer = 1;

  // staking_coins specifies coins to stake
  repeated cosmos.base.v1beta1.Coin staking_coins = 2 [
    (gogoproto.moretags)     = "yaml:\"staking_coins\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}

// MsgUnstake defines a SDK message for performing unstaking of coins from the
// farming plan.
message MsgUnstake {
  // farmer defines the bech32-encoded address of the farmer
  string farmer = 1;

  // unstaking_coins specifies coins to stake
  repeated cosmos.base.v1beta1.Coin unstaking_coins = 2 [
    (gogoproto.moretags)     = "yaml:\"unstaking_coins\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable)     = false
  ];
}

// MsgHarvest defines a SDK message for claiming rewards from the farming plan.
message MsgHarvest {
  // farmer defines the bech32-encoded address of the farmer
  string farmer = 1;

  // staking_coin_denom is denom of staked coin as a source of the reward for
  // harvesting
  string staking_coin_denom = 2 [(gogoproto.moretags) = "yaml:\"staking_coin_denom\""];
}

// MsgCreateFixedAmountPlanResponse defines the
// Msg/CreateFixedAmountPlanResponse response type.
message MsgCreateFixedAmountPlanResponse {}

// MsgCreateRatioPlanResponse  defines the Msg/MsgCreateRatioPlanResponse
// response type.
message MsgCreateRatioPlanResponse {}

// MsgStakeResponse  defines the Msg/MsgStakeResponse response type.
message MsgStakeResponse {}

// MsgUnstakeResponse defines the Msg/MsgUnstakeResponse response type.
message MsgUnstakeResponse {}

// MsgHarvestResponse defines the Msg/MsgHarvestResponse response type.
message MsgHarvestResponse {}
